fix(css): Remove display:grid for list items causing overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -227,7 +227,6 @@ header site-search button {
 }
 
 .sl-markdown-content :not(ul, ol) + :is(ul, ol):not(:where(.not-content *, .sl-steps)) {
-  display: grid; /* helps with list markers alignment */
   margin-block: 0.75rem;
   margin-inline: 0;
   padding-inline-start: 1.5rem;
